<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xiaowangzhixiao.firstcar.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_bt_connect"
            android:layout_weight="1" />

        <Button
            android:text="home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_bt_home"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/main_input"
            android:layout_weight="1" />

        <Button
            android:text="@string/send"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:id="@+id/main_bt_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="18sp"
            android:id="@+id/main_tv_x"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textSize="18sp"
            android:id="@+id/main_tv_y"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pitch"
            android:textSize="18sp"
            android:id="@+id/main_tv_pitch"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:textSize="18sp"
            android:id="@+id/main_tv_roll"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="18sp"
            android:id="@+id/main_tv_speed"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yaw"
            android:textSize="18sp"
            android:id="@+id/main_tv_yaw"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:background="@drawable/textview_border"
        android:id="@+id/main_msg"
        android:layout_weight="1" />

    <Button
        android:text="@string/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_bt_clear" />

    <Button
        android:text="@string/pos_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_bt_pos" />

    <Button
        android:text="@string/launch_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_bt_launch" />

    <Button
        android:text="@string/action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_bt_action" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_bt_reboot"
            android:layout_weight="1" />

        <Button
            android:text="@string/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_bt_stop"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
