<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xiaowangzhixiao.firstcar.ActionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textSize="18sp"
            android:id="@+id/act_tv_x"
            android:layout_width="0dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textSize="18sp"
            android:id="@+id/act_tv_y"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/pitch"
            android:textSize="18sp"
            android:id="@+id/act_tv_pitch"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            android:textSize="18sp"
            android:id="@+id/act_tv_roll"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textSize="18sp"
            android:id="@+id/act_tv_speed"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yaw"
            android:textSize="18sp"
            android:id="@+id/act_tv_yaw"/>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="numberSigned|numberDecimal"
                android:ems="10"
                android:id="@+id/act_et_x"
                android:labelFor="@id/act_et_x"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/textView2"
                android:textSize="24sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:layout_weight="2"
                android:ems="10"
                android:id="@+id/act_et_y"
                android:labelFor="@id/act_et_y"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/add_pos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_bt_pos_add"
            android:layout_weight="1" />

        <Button
            android:text="@string/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_bt_go"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/target"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="1"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/act_et_target"
            android:labelFor="@id/act_et_target"
            android:layout_weight="1.5" />

        <Button
            android:text="@string/change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/act_bt_target"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/pitch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/act_et_pitch"
            android:labelFor="@id/act_et_pitch"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/act_et_roll"
            android:labelFor="@id/act_et_roll"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/act_et_speed"
            android:labelFor="@id/act_et_speed"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/yaw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:textSize="24sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:ems="10"
            android:id="@+id/act_et_yaw"
            android:labelFor="@id/act_et_yaw"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/add_launch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/act_bt_launch_add"
            android:layout_weight="1" />

        <Button
            android:text="@string/set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/act_bt_set"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/left"
            android:layout_width="0dp"
            android:id="@+id/act_bt_left"
            android:layout_weight="1"
            android:layout_height="100dp" />

        <Button
            android:text="@string/right"
            android:layout_width="0dp"
            android:id="@+id/act_bt_right"
            android:layout_weight="1"
            android:layout_height="100dp" />
    </LinearLayout>

    <Button
        android:text="@string/stop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/act_bt_stop" />

</LinearLayout>
